--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Signatures 🤗</title>
+		<meta name="description" content="This project is an effort to make modding Minecraft: Bedrock Edition easier. Please note that signatures/offsets on this website are generated automatically. There is a chance of them not working. Please do not rely on this and only use this for reference and learning purposes." />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
